Update layouts and design

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,8 +24,8 @@
                       </ul>
                     </div>
                     <div class="col-md-3 col-md-offset-1">
-                    
-                      <h4>Follow Us Here</h4>
+
+                      <h4>Follow Me Here   </h4>
                       {% if site.gplus_username %}
 
                       <!-- Place this tag where you want the widget to render. -->
@@ -41,7 +41,8 @@
                       </script>
                       {% endif %}
                         <!-- <img class="footer-logo" src="img/maanga-logo.png"/> -->
-                      
+                      <h4>Fun Travel Data</h4>
+                      <a href="https://www.jetitup.com/MyStats/See/?name=Matthew~K~Cowger" title="View my JetItUp infographic"><img src="https://www.jetitup.com/MyStats/Banner/?name=Matthew~K~Cowger&lang=en" alt="View my JetItUp infographic" /></a>
                       </div>
                   </div>
               </div>
